<resources>
    <string name="app_name">Logicaapp</string>
    <string name="titleText">Conjunction (AND)</string>
    <string name="labelA">A</string>
    <string name="labelB">B</string>
    <string name="labelFormula">A ^ B</string>
    <string name="labelTrue">T</string>
    <string name="labelFalse">F</string>
    <string name="buttonTextSubmit">Submit</string>
    <string name="answerCorrect">Correct!</string>
    <string name="answerIncorrect">You\'ve made a mistake!</string>
</resources>
